tests/samples/positive/expressions/compound_assignment.ax
module compound_assignment;

struct Box {
    value: i32;
}

fn main() -> i32 {
    var value: i32 = 10;
    value += 5;
    value -= 3;
    value *= 4;
    value /= 6;
    value %= 5;
    value <<= 3;
    value >>= 1;
    value &= 6;
    value ^= 3;
    value |= 8;
    value += 1;
    value -= 1;

    var box: Box = Box { value: 1 };
    box.value += value;
    box.value += 1;

    for var i: i32 = 0; i < 3; i += 1 {
        value += i;
    }

    if value != 18 {
        return 1;
    }
    if box.value != 17 {
        return 2;
    }
    return 0;
}
