tests/samples/negative/generics/generic_impl_method_no_self_receiver.ax
module generic_impl_method_no_self_receiver;

struct Box<T> {
    value: T;
}

impl<T> Box<T> {
    fn make(value: T) -> Box<T> {
        return Box { value: value };
    }
}

fn main() -> i32 {
    var box: Box<i32> = Box { value: 1 };
    return box.make(2);
}
